--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 incoming
+output.log
 scripts/*.txt
 scripts/*.pdf
 scripts/*.html
 scripts/*.pyc
 mkd/[^0-9]*.mkd
-covers/[^0-9]*.jpg
+cover/[^0-9]*.jpg
 html/[^0-9]*.html
 pdf/[^0-9]*.pdf
 plucker/[^0-9]*.pdb
