Add back support for cover images
Also change naming scheme to allow lowercase free books.

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,12 @@ scripts/*.txt
 scripts/*.pdf
 scripts/*.html
 scripts/*.pyc
-mkd/[^0-9]*.mkd
-cover/[^0-9]*.jpg
-html/[^0-9]*.html
-pdf/[^0-9]*.pdf
-plucker/[^0-9]*.pdb
-mobi/[^0-9]*.mobi
-epub/[^0-9]*.epub
-lit/[^0-9]*.lit
-pdb/[^0-9]*.pdb
-fb2/[^0-9]*.fb2
+mkd/[A-Z]*.mkd
+cover/[A-Z]*.jpg
+html/[A-Z]*.html
+pdf/[A-Z]*.pdf
+mobi/[A-Z]*.mobi
+epub/[A-Z]*.epub
+lit/[A-Z]*.lit
+pdb/[A-Z]*.pdb
+fb2/[A-Z]*.fb2
